--- a/package.json
+++ b/package.json
@@ -3,9 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.5",
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "bootstrap": "^4.3.1",
+    "date-fns": "^2.0.0-alpha.27",
+    "jquery": "^1.9.1",
+    "material-design-lite": "^1.3.0",
+    "material-ui-pickers": "^2.2.4",
+    "mdbootstrap": "^4.8.0",
+    "mdbreact": "^4.13.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-beautiful-dnd": "^11.0.2",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-masonry-component": "^6.2.1",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.0",
+    "styled-components": "^4.2.0",
+    "typescript": "^3.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
